--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.101.1"
 uvicorn = "^0.23.2"
 pydantic-settings = "^2.0.3"
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+openai = "^0.27.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
