--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "next": "13.4.16",
+    "next-translate": "^2.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -31,6 +32,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-config-prettier": "^9.0.0",
+    "next-translate-plugin": "^2.5.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.1",
     "prettier-plugin-organize-imports": "^3.2.3",
