--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@react-google-maps/api": "^2.19.2",
     "next": "13.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0"
