--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@mui/x-date-pickers": "^6.15.0",
+    "moment": "^2.29.4",
     "next": "13.4.16",
     "next-translate": "^2.5.3",
     "react": "18.2.0",
