--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,11 +6,12 @@ authors = ["chanon-mike <zzmikezz8520@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-fastapi = "^0.101.1"
+python = "^3.9"
+fastapi = "^0.99.1"
+pydantic = "^1.10.12"
 uvicorn = "^0.23.2"
-pydantic-settings = "^2.0.3"
-pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+pyjwt = "^2.8.0"
+crypto = "^3.4.7"
 openai = "^0.27.9"
 mangum = "^0.17.0"
 
@@ -28,4 +29,4 @@ line_length = 88
 
 [tool.black]
 line-length = 88
-target-version = ['py311']
+target-version = ['py39']
