--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "husky": "^8.0.0",
     "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "@react-google-maps/api": "^2.19.2"
   }
 }
