--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
-    "@react-google-maps/api": "^2.19.2",
     "@mui/x-date-pickers": "^6.15.0",
+    "@react-google-maps/api": "^2.19.2",
+    "axios": "^1.5.0",
     "moment": "^2.29.4",
     "next": "13.4.16",
     "next-translate": "^2.5.3",
