--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -10,6 +10,7 @@ provider:
   runtime: python3.9
   stage: ${opt:stage, "dev"}
   region: ap-northeast-1
+  timeout: 50
   deploymentBucket:
     name: smart-ryokou-api
   environment:
