--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ pyjwt = "^2.8.0"
 cryptography = "^3.4.7"
 openai = "^0.27.9"
 mangum = "^0.17.0"
+json5 = "^0.9.14"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
