--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^6.15.0",
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
+    "ioredis": "^5.3.2",
     "moment": "^2.29.4",
     "next": "13.4.16",
     "next-translate": "^2.5.3",
