--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.17",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -47,5 +48,4 @@
     "prettier-plugin-organize-imports": "^3.2.3",
     "typescript": "5.1.6"
   }
-  
 }
