feat: fetch image data

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "lint:prettier": "prettier --check \"./**/*.{ts,tsx,js}\" --ignore-path ../.gitignore",
     "lint:fix": "npm run lint:js -- --fix && prettier --write \"./**/*.{ts,tsx,js}\" --ignore-path ../.gitignore",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev -p 3000"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
@@ -39,6 +40,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-config-prettier": "^9.0.0",
