--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@react-google-maps/api": "^2.19.2",
     "axios": "^1.5.0",
     "ioredis": "^5.3.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "next": "13.4.16",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.17",
+    "@types/lodash": "^4.14.200",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
