feat: add mongodb

--- a/compose.yml
+++ b/compose.yml
@@ -5,3 +5,10 @@ services:
       - "6379:6379"
     volumes:
       - "./data/redis:/data"
+
+  mongodb:
+    image: "mongo:latest"
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./data/mongodb:/data/db
