--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,4 +5,12 @@ AUTH0_CLIENT_ID=AUTH0-CLIENT-ID
 AUTH0_CLIENT_SECRET=AUTH0-CLIENT-SECRET
 AUTH0_AUDIENCE=AUTH-API-IDENTIFIER
 
+REDIS_CONNECTION_URL=redis://localhost:6379
+MONGODB_URI=mongodb://localhost:27017
+
+NEXT_PUBLIC_GOOGLE_MAPS_API=GOOGLE-MAPS-API-KEY
+NEXT_PUBLIC_GOOGLE_SEARCH_API=GOOGLE-SEARCH-API-KEY
+NEXT_PUBLIC_CX=GOOGLE-CX
+
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:8000
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
