--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "@aws-sdk/client-s3": "^3.468.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
@@ -25,6 +26,7 @@
     "@mui/material": "^5.14.5",
     "@mui/x-date-pickers": "^6.15.0",
     "@react-google-maps/api": "^2.19.2",
+    "aws-sdk": "^2.1512.0",
     "axios": "^1.5.0",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
