--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "next-translate-plugin": "^2.5.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.1",
