--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "next-translate": "^2.5.3",
     "next-usequerystate": "^1.13.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-share": "^5.0.3"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.17",
