--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
-    "next": "13.4.16",
-    "next-translate": "^2.5.3",
+    "next": "^13.5.6",
+    "next-international": "^1.2.3",
     "next-usequerystate": "^1.13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -51,7 +51,6 @@
     "eslint-config-next": "13.4.16",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "next-translate-plugin": "^2.5.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.1",
     "prettier-plugin-organize-imports": "^3.2.3",
